--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <img src="assest/images/as1.PNG" alt="" class="assignment__img">
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                        <a href="">
                             <h3 class="assignment__title">Assignment 01</h3>
                         </a>
                     </div>
@@ -296,7 +296,7 @@
                     <img src="assest/images/as2.PNG" alt="" class="assignment__img">
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                        <a href="">
                             <h3 class="assignment__title">Assignment 02</h3>
                         </a>
                     </div>
@@ -306,7 +306,7 @@
                     <img src="assest/images/as3.PNG" alt="" class="assignment__img">
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                        <a href="">
                             <h3 class="assignment__title">Assignment 03</h3>
                         </a>
                     </div>
@@ -316,7 +316,7 @@
                     <img src="assest/images/as4.PNG" alt="" class="assignment__img">
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                        <a href="">
                             <h3 class="assignment__title">Assignment 04</h3>
                         </a>
                     </div>
@@ -326,7 +326,7 @@
                     <img src="assest/images/as5.PNG" alt="" class="assignment__img">
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                        <a href="">
                             <h3 class="assignment__title">Assignment 05</h3>
                         </a>
                     </div>
@@ -336,7 +336,7 @@
                     <img src="assest/images/as6.PNG" alt="" class="assignment__img">
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                        <a href="">
                             <h3 class="assignment__title">Assignment 06</h3>
                         </a>
                     </div>
