--- a/Assignment/CSS/CaseTwo/index.html
+++ b/Assignment/CSS/CaseTwo/index.html
@@ -119,7 +119,7 @@
         }
 
         main > section > section > div:nth-child(1) {
-            background: url("/Assignment/CSS/CaseTwo/assest/dance.gif");
+            background: url("assest/dance.gif");
             background-size: cover;
             background-position: center;
             left: 0;
@@ -127,14 +127,14 @@
 
         main > section > section > div:nth-child(2) {
             left: calc(100% / 3);
-            background: url("/Assignment/CSS/CaseTwo/assest/dance.gif");
+            background: url("assest/dance.gif");
             background-size: cover;
             background-position: center;
         }
 
         main > section > section > div:nth-child(3) {
             right: 0;
-            background: url("/Assignment/CSS/CaseTwo/assest/dance.gif");
+            background: url("assest/dance.gif");
             background-size: cover;
             background-position: center;
         }
@@ -144,7 +144,7 @@
 </head>
 <body>
 <header>
-    <img src="/Assignment/CSS/CaseTwo/assest/ijse.png" alt="LOGO">
+    <img src="assest/ijse.png" alt="LOGO">
     <nav>
         <ul>
             <li><i class="fa fa-home" aria-hidden="true"></i><a href="#">Home</a></li>
