--- a/index.html
+++ b/index.html
@@ -283,60 +283,72 @@
 
             <div class="assignment__container container grid">
                 <div class="assignment__item">
-                    <img src="assest/images/as1.PNG" alt="" class="assignment__img">
+                   <a href="Assignment/CSS/CaseOne/index.html">
+                        <img src="assest/images/as1.PNG" alt="" class="assignment__img">
+                   </a>
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="">
+                        <a href="Assignment/CSS/CaseOne/index.html">
                             <h3 class="assignment__title">Assignment 01</h3>
                         </a>
                     </div>
                 </div>
 
                 <div class="assignment__item">
-                    <img src="assest/images/as2.PNG" alt="" class="assignment__img">
+                    <a href="Assignment/CSS/CaseTwo/index.html">
+                        <img src="assest/images/as2.PNG" alt="" class="assignment__img">
+                    </a>
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="">
+                        <a href="Assignment/CSS/CaseTwo/index.html">
                             <h3 class="assignment__title">Assignment 02</h3>
                         </a>
                     </div>
                 </div>
 
                 <div class="assignment__item">
-                    <img src="assest/images/as3.PNG" alt="" class="assignment__img">
+                    <a href="Assignment/CSS/CaseThree/index.html">
+                        <img src="assest/images/as3.PNG" alt="" class="assignment__img">
+                    </a>
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="">
+                        <a href="Assignment/CSS/CaseThree/index.html">
                             <h3 class="assignment__title">Assignment 03</h3>
                         </a>
                     </div>
                 </div>
 
                 <div class="assignment__item">
-                    <img src="assest/images/as4.PNG" alt="" class="assignment__img">
+                    <a href="Assignment/CSS/CaseFour/index.html">
+                        <img src="assest/images/as4.PNG" alt="" class="assignment__img">
+                    </a>
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="">
+                        <a href="Assignment/CSS/CaseFour/index.html">
                             <h3 class="assignment__title">Assignment 04</h3>
                         </a>
                     </div>
                 </div>
 
                 <div class="assignment__item">
-                    <img src="assest/images/as5.PNG" alt="" class="assignment__img">
+                    <a href="Assignment/CSS/CaseFive/index.html">
+                        <img src="assest/images/as5.PNG" alt="" class="assignment__img">
+                    </a>
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="">
+                        <a href="Assignment/CSS/CaseFive/index.html">
                             <h3 class="assignment__title">Assignment 05</h3>
                         </a>
                     </div>
                 </div>
 
                 <div class="assignment__item">
-                    <img src="assest/images/as6.PNG" alt="" class="assignment__img">
+                    <a href="Assignment/CSS/CaseSix/index.html">
+                        <img src="assest/images/as6.PNG" alt="" class="assignment__img">
+                    </a>
                     <div class="assignment__data">
                         <p class="assinment__subtitle">Web Design</p>
-                        <a href="">
+                        <a href="Assignment/CSS/CaseSix/index.html">
                             <h3 class="assignment__title">Assignment 06</h3>
                         </a>
                     </div>
