--- a/Assignment/Animation/CaseSix/index.html
+++ b/Assignment/Animation/CaseSix/index.html
@@ -5,8 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case6</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        .sky{
+            height: 100vh;
+            width: 100%;
+            background-image: url(assest/sky.jpg);
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        .highway{
+            height: 200px;
+            width: 500%;
+            display: block;
+            background-image: url(assest/road.jpg);
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 1;
+            background-repeat: repeat-x;
+            animation: highway 5s linear infinite;
+        }
+
+        @keyframes highway{
+            100%{
+                transform: translateX(-2400px);
+            }
+        }
+
+        .city{
+            height: 250px;
+            width: 500%;
+            background-image: url(assest/city.png);
+            position: absolute;
+            bottom: 200px;
+            left: 0;
+            right: 0;
+            display: block;
+            z-index: 1;
+            background-repeat: repeat-x;
+            animation: city 20s linear infinite;
+        }
+
+        @keyframes city{
+            100%{
+                transform: translate(-1400px);
+            }
+        }
+
+    </style>
 </head>
 <body>
-    
+    <div class="sky" >
+        <div class="highway"></div>
+        <div class="city"></div>
+    </div>
 </body>
 </html>
