animation case six completed

--- a/Assignment/Animation/CaseSix/index.html
+++ b/Assignment/Animation/CaseSix/index.html
@@ -60,12 +60,77 @@
             }
         }
 
+        .car{
+            width: 400px;
+            left: 50%;
+            bottom: 100px;
+            transform: translateX(-50%);
+            position: absolute;
+            z-index: 2;
+        }
+
+        .car img{
+            width: 100%;
+            animation: car 1s linear infinite;
+        }
+
+        @keyframes car{
+            100%{
+                transform: translateY(-1px);
+            }
+            50%{
+                transform: translateY(1px);
+            }
+            0%{
+                transform: translateY(-1px);
+            }
+        }
+
+        .wheel{
+            left: 50%;
+            bottom: 178px;
+            transform: translateX(-50%);
+            position: absolute;
+            z-index: 2;
+        }
+
+        .wheel img{
+            width: 72px;
+            height: 72px;
+            animation: wheel 1s linear infinite;
+        }
+
+        .back-wheel{
+            left: -165px;
+            position: absolute;
+        }
+
+        .Front-wheel{
+            left: 80px;
+            position: absolute;
+        }
+
+        @keyframes wheel{
+            100%{
+                transform: rotate(360deg);
+            }
+        }
+
     </style>
 </head>
 <body>
     <div class="sky" >
         <div class="highway"></div>
         <div class="city"></div>
+
+        <div class="car">
+            <img src="assest/car.png" alt="">
+        </div>
+
+        <div class="wheel">
+            <img src="assest/wheel.png" class="back-wheel">
+            <img src="assest/wheel.png" class="Front-wheel">
+        </div>
     </div>
 </body>
 </html>
