assignment fome completed

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <img src="assest/images/as1.PNG" alt="" class="assignment__img">
                    </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Web Design</p>
+                        <p class="assinment__subtitle">CSS</p>
                         <a href="Assignment/CSS/CaseOne/index.html">
                             <h3 class="assignment__title">Assignment 01</h3>
                         </a>
@@ -299,7 +299,7 @@
                         <img src="assest/images/as2.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Web Design</p>
+                        <p class="assinment__subtitle">CSS</p>
                         <a href="Assignment/CSS/CaseTwo/index.html">
                             <h3 class="assignment__title">Assignment 02</h3>
                         </a>
@@ -311,7 +311,7 @@
                         <img src="assest/images/as3.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Web Design</p>
+                        <p class="assinment__subtitle">CSS</p>
                         <a href="Assignment/CSS/CaseThree/index.html">
                             <h3 class="assignment__title">Assignment 03</h3>
                         </a>
@@ -323,7 +323,7 @@
                         <img src="assest/images/as4.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Web Design</p>
+                        <p class="assinment__subtitle">CSS</p>
                         <a href="Assignment/CSS/CaseFour/index.html">
                             <h3 class="assignment__title">Assignment 04</h3>
                         </a>
@@ -335,7 +335,7 @@
                         <img src="assest/images/as5.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Web Design</p>
+                        <p class="assinment__subtitle">CSS</p>
                         <a href="Assignment/CSS/CaseFive/index.html">
                             <h3 class="assignment__title">Assignment 05</h3>
                         </a>
@@ -347,12 +347,85 @@
                         <img src="assest/images/as6.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">Web Design</p>
+                        <p class="assinment__subtitle">CSS</p>
                         <a href="Assignment/CSS/CaseSix/index.html">
                             <h3 class="assignment__title">Assignment 06</h3>
                         </a>
                     </div>
                 </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/Transitions/CaseOne/index.html">
+                        <img src="assest/images/as1T1.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Transitions</p>
+                        <a href="Assignment/Transitions/CaseOne/index.html">
+                            <h3 class="assignment__title">Assignment 01</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/Transitions/CaseTwo/index.html">
+                        <img src="assest/images/as2T2.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Transitions</p>
+                        <a href="Assignment/Transitions/CaseTwo/index.html">
+                            <h3 class="assignment__title">Assignment 02</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/Animation/CaseThree/index.html">
+                        <img src="assest/images/as1an1.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Animations</p>
+                        <a href="Assignment/Animation/CaseThree/index.html">
+                            <h3 class="assignment__title">Assignment 01</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/Animation/CaseFour/index.html">
+                        <img src="assest/images/as2an2.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Animations</p>
+                        <a href="Assignment/Animation/CaseFour/index.html">
+                            <h3 class="assignment__title">Assignment 02</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/Animation/CaseFive/index.html">
+                        <img src="assest/images/as3an3.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Animations</p>
+                        <a href="Assignment/Animation/CaseFive/index.html">
+                            <h3 class="assignment__title">Assignment 03</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/Animation/CaseSix/index.html">
+                        <img src="assest/images/as4an4.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Animations</p>
+                        <a href="Assignment/Animation/CaseSix/index.html">
+                            <h3 class="assignment__title">Assignment 04</h3>
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
