media query forms added

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <div class="home__content">
                     <span class="home__subtitle">Welcome to My Portfolio</span>
                     <h1 class="home__title">
-                        Hi, I'm Savindi Dadallage
-                        <span> Fullstack Developer.</span>
+                        Hi, I'm Savindi
+                        <span> UI/UX&nbsp;Developer.</span>
                         based in Sri Lanka.
                     </h1>
                 </div>
