laptop size-1024px media query completed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- ====================  HEADER  ============================== -->
     <header class="header" id="header">
-        <nav class="nav container">
+        <nav class="nav container grid">
             <a href="index.html" class="nav__logo">sa<span>vii</span></a>
 
             <div class="nav__menu" id="nav-memu">
@@ -83,7 +83,7 @@
                 <div class="home__content">
                     <span class="home__subtitle">Welcome to My Portfolio</span>
                     <h1 class="home__title">
-                        Hi, I'm Savindi
+                        Hi, I'm Savindi&nbsp;Dadallage
                         <span> UI/UX&nbsp;Developer.</span>
                         based in Sri Lanka.
                     </h1>
