mobile size menu JS added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="nav container grid">
             <a href="index.html" class="nav__logo">sa<span>vii</span></a>
 
-            <div class="nav__menu" id="nav-memu">
+            <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li><a href="#home" class="nav__link active-link">Home</a></li>
 
@@ -65,7 +65,7 @@
                 <div class="nav__btns">
                     <a href="#contact" class="nav__link-btn btn">Let's talk</a>
 
-                    <div class="nav__toggle" id="nav__toggle">
+                    <div class="nav__toggle" id="nav-toggle">
                         <i class="uil uil-bars"></i>
                     </div>
                 </div>
