--- a/Assignment/CSS-FrameWork/POS/index.html
+++ b/Assignment/CSS-FrameWork/POS/index.html
@@ -7,15 +7,48 @@
         <!-- UNICONS -->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
         <!-- CSS -->
-        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="../css/bootstrap.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Wholesale Store</title>
         <!-- <meta http-equiv="refresh" content="3; ">> -->
-        <link rel="icon" href="assest/images/Savii1234.png">
+        <link rel="icon" href="assest/store.png">
     </head>
     
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <img src="assest/store.png" alt="">
+                <a class="navbar-brand" href="#">Wholesale Store</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Customer</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Employee</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Item</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Order</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+    </header>
     
 </body>
 </html>
